--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-filter-pipe": "^2.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
